# concurrent_cilk

./: .gitignore  .gitmodules  .jenkins_common_setup.sh  .jenkins_script.sh  .run-benchmarks.sh  CMakeLists.txt  ChangeLog.cilkplus  Makefile  Makefile.am  Makefile.common  Makefile.icc  Makefile.in  README  aclocal.m4  build_libcilk.sh  clean_and_rebuild.sh  compile.sh  config.status  configure  env_cilk  env_turing  fetch_data.sh  fib_pthread.c  ivars_parfib.c  libtool  make_data  param_cilk  parfib.c  parfib_ivars.c  run-benchmarks.cabal  run-benchmarks.hs  test_cilk.py  testcilk.c  time_fib  timer.h
.libs/: lt-time_fib
RAW/Ivars_Syncvars/: 10.perf1  10.perf2  11.perf1  11.perf2  12.perf1  12.perf2  13.perf1  13.perf2  14.perf1  14.perf2  15.perf1  15.perf2  16.perf1  16.perf2  17.perf1  17.perf2  18.perf1  18.perf2  19.perf1  19.perf2  20.perf1  20.perf2  21.perf1  21.perf2  22.perf1  22.perf2  23.perf1  23.perf2  24.perf1  24.perf2  25.perf1  25.perf2  26.perf1  26.perf2  27.perf1  27.perf2  28.perf1  28.perf2  29.perf1  29.perf2  (+12 more)
autom4te.cache/: output.0  output.1  output.2  output.4  output.6  output.8  output.9  requests  traces.0  traces.1  traces.10  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.9
build_scripts/: build_libcilk.sh  clean_and_rebuild.sh  env_cilk  set_compiler  set_up_cilk_iu
cilk_docs/: intro.tex  main.aux  main.bbl  main.blg  main.tex.project.vim  main_aux  prog1_serial.c  work-stealing.tex  work-stealing.tex.project.vim
cilk_docs/graphs/: c_stack.eps
cmake/Modules/: CilkTestsCommon.cmake  TargetDistclean.cmake
data/: regresssions_plot_data.csv
gperftools/gperftools-2.1/: Makefile  config.status  libtool
gperftools/gperftools-2.1/.deps/: addressmap_unittest-addressmap_unittest.Po  atomicops-internals-x86.Plo  atomicops_unittest.Po  current_allocated_bytes_test-current_allocated_bytes_test.Po  debugallocation_test-debugallocation_test.Po  dynamic_annotations.Plo  elf_mem_image.Plo  frag_unittest-frag_unittest.Po  getpc_test.Po  heap_checker_debug_unittest-heap-checker_unittest.Po  heap_checker_unittest-heap-checker_unittest.Po  heap_profiler_debug_unittest-heap-profiler_unittest.Po  heap_profiler_unittest-heap-profiler_unittest.Po  libtcmalloc_and_profiler_la-heap-checker-bcad.Plo  libtcmalloc_and_profiler_la-heap-checker.Plo  libtcmalloc_and_profiler_la-linuxthreads.Plo  libtcmalloc_and_profiler_la-profile-handler.Plo  libtcmalloc_and_profiler_la-profiledata.Plo  libtcmalloc_and_profiler_la-profiler.Plo  libtcmalloc_and_profiler_la-tcmalloc.Plo  (+111 more)
gperftools/libunwind-0.99-beta/: Makefile  config.status  libtool
include/cilk/: cilk_api.h  common.h  concurrent_cilk.h  concurrent_queue.h  ivar.h
include/internal/: abi.h
ivar/: .nfs00000000370150330000001e
ivar/benchmarks/: .libecilk.c.swp  .libecilk.h.swp
ivar/benchmarks/microbench/: CMakeLists.txt  microbench.c  microbench_many_blocking.cpp
ivar/correctness/simple/: CMakeLists.txt  Makefile  ivar2.c  ivar2B.c  ivar3.cpp  ivar4.cpp  ivar5.c  ivar_server.c  run_all.sh  server.cpp  tags  timing.h
ivar_tests/: .nfs000000003701502b0000004e  Makefile.bak  Makefile.common  Makefile.generic
ivar_tests/benchmarks/: Makefile  ivar_producer_consumer.c  microbench.c  wavefront.cpp
ivar_tests/queue/: queue_test.c
ivar_tests/readwrite/: Makefile  deadlock_test.c  deadlock_test1.c  deadlock_test2.c  deadlock_test2B.c  deadlock_test3.cpp  deadlock_test4.cpp  deadlock_test5.c  deadlock_test6.c  interleaved_read_write.c  nested_deadlock.c  nested_deadlock_assignment.c  nested_deadlock_delay_writer.c
ivar_tests/scripts/: run_tests.sh
ivar_tests/simple/: .#ivar1.c  Makefile  ivar1.c  ivar2.c  ivar2B.c  ivar3.cpp  ivar4.cpp  ivar5.c  ivar_server.c  measure_one_pause.cpp  measure_one_pause_cnc.cpp  test.c
ivar_tests/test_harness/: autograder.py  parser.py  testfile.txt  testharness.py
m4/: libtool.m4  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4
old_scrap/: echoserver_cilk_io_v0.c
parfib/: CMakeLists.txt  Makefile  fib_pthread.c  ivars_parfib.c  parfib.c  time_cilk_fib.c
qthread_tests/: Makefile.common
qthread_tests/benchmarks/: Makefile  hello_world.c  qthread_microbench.c  test.c
qthread_tests/common/: valgrindgdb.sh
regression/LU_decomp/: lu.c  old  plu.c
regression/black-scholes/: black_scholes.cpp
regression/cholesky/: Makefile
regression/jacobi-heat/: Makefile  heat.c
regression/kalah/: kalah.c
regression/knapsack/: Makefile  knapsack.c
regression/strassen_multiply/: Makefile  strassen.c
regression/utils/: parallelDefs  param_pbbs  timer.h
results/: Ivars_Syncvars.perf  fib_pthread.txt  foo  microbench_data.perf  microbench_many.perf  parfor1.perf  parfor1_non_ivars.perf  parfor2.perf  parfor2_non_ivars.perf  plot_file.txt
results/EPS_FILES/: Ivars_Syncvars.eps  foo.eps  parfor1.eps  parfor2.eps
runtime/: .concurrent_cilk.c.swp  .scheduler.c.swp  Doxyfile  c_reducers.c  cilk-abi-cilk-for.cpp  cilk-abi.c  cilk_util.h  concurrent_cilk.c  concurrent_cilk.h  concurrent_cilk_forwarding_array.c  concurrent_cilk_forwarding_array.h  concurrent_cilk_internal.h  concurrent_cilk_pthread.c  concurrent_queue.c  concurrent_queue.h  concurrent_scheduler.c  concurrent_scheduler.h  coroutine.c  cscope.files  cscope.out  devlog.chris  dif_sched.txt  except-gcc.cpp  full_frame.c  full_frame.h  global_state.cpp  global_state.h  ivar_busywait.c  ivar_full_blocking.c  ivar_spec.txt  local_state.c  local_state.h  meta_schedulers.h  pedigrees.h  random_scheduler.c  random_scheduler.h  reducer_impl.cpp  scheduler.c  scheduler.h  signal_node.c  (+7 more)
runtime/core/: cilk-abi.c  cilk_api.c  frame_malloc.c  full_frame.c  global_state.cpp  global_state.h  os-unix.c  os_mutex-unix.c  scheduler.c  scheduler.h  signal_node.c  sync.c  worker_mutex.c
runtime/io/: Makefile  concurrent_cilk_io.c  echoserver_threaded.c  iv_cilk_server.c
runtime/queues/: .michael_scott_queue.h.swp  cache_aware_queue.c  lockfree_queue.c  lockfree_queue.h  locking_queue.c  locking_queue.h  michael_scott_queue.h
scripts/: build_directory.sh  run_wavefront_all.sh
(+1182 files in other folders)
