
name:                concurrentCilk-benchmarks
version:             0.1.0.0
author:              Tim Zakian, Chris Zakian, Ryan Newton
maintainer:          rrnewton@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable run-benchmarks.exe
  main-is:             run-benchmarks.hs
  other-extensions:    CPP, BangPatterns, DeriveGeneric
  build-depends:       base >=4.6, deepseq >=1.3, time >=1.4, 
                       containers >=0.5, process >= 1.1, directory,
                       random >=1.0 && <1.1, 
                       mtl >=2.1, data-default,
                       GenericPretty >=1.2 && <1.3, 
                       test-framework >=0.8 && <0.9, 
                       test-framework-hunit >=0.3 && <0.4, HUnit >=1.2 && <1.3,
                       hsbencher >= 1.12,
                       hsbencher-fusion >= 0.2,
                       hsbencher-codespeed >= 0.1
  default-language:    Haskell2010
  ghc-options: -threaded
